fix menu width size on mobile

--- a/dest/css/main.css
+++ b/dest/css/main.css
@@ -77,6 +77,7 @@ h1, h2, h3, h4 {
 .landing .website-header,
 .front .website-header {
   width: 15%;
+  min-width: 200px;
   float: left; }
 
 /* layout/_footer.scss */
