--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -3,6 +3,7 @@
 .front {
   .website-header {
     width: 15%;
+    min-width: 200px;
     float: left;
   }
 }
